test/types/unions/bad-union-field.chpl
union U {
  param p: int;
  type t;
  var x: t;
  const y: real;
}
var u: U;
